# OPC-UA-CPP

./: CMakeLists.txt  DEPLOYMENT.md  IMPLEMENTACION_COMPLETADA.md  Makefile  README.md  TERMINACION_CONTROLADA_SOLUCION.md  explore_server.py  listaVariables.txt  lista_tag_general.txt  pac_config copy.json  prepare_production.sh  production.sh  production_config.md  start_production.sh  tags.json  test_write_opcua.py
include/: common.h  opcua_server.h  opcua_server_integrated.h  pac_control_client.h
src/: TEST  main.cpp  main_integrated.cpp  opcua_server.cpp  opcua_server_integrated.cpp  pac_control_client..cpp  pac_control_client.cpp  pac_control_client_stub.cpp
